# mcp_use_test

./: .gitignore  LICENSE  README.md  bot.py  check_setup.py  config.json.example  main.py  mcp_client.py  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: main.prompt.md
