[project]
name = "mcp-cb"
version = "0.1.0"
description = "Telegram chatbot with ChatGPT and MCP server integration for web page parsing"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "MCP-CB Project"}
]
keywords = ["telegram", "bot", "chatgpt", "mcp", "web-parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyTelegramBotAPI>=4.14.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "mcp",
]

[project.scripts]
mcp-cb = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "black",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
